@@ -1,5 +1,7 @@
 19/06/2023:
 	- Harmonized iipsrv identity string between JPEG and PNG.
+	- Added ability to choose a particular page or slice in an image stack when using IIIF by using
+	  a comma delimitter after the file name. For example: /image.tif,5/full/500/0/default.jpg (6th page)
 
 
 05/06/2023:
